<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FDHelper</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="menu_use_item">Item 적용</string>
    <string name="submenu_use_item_condition">컨디션</string>
    <string name="submenu_use_item_stamina">체력</string>
    <string name="submenu_use_item_condition_and_stamina">컨디션+체력</string>
    <string name="submenu_use_item_yellow_card">경고</string>
    <string name="submenu_use_item_taurine">타우린</string>

    <string name="menu_combine_item">Item 조합</string>
    <string name="submenu_combine_item_low">하급 Item(수퍼패스/응급처치 키트) 조합</string>
    <string name="submenu_combine_item_max_condition">아드레날린 조합</string>
    <string name="submenu_combine_item_max_stamina">홍상 액기스 조합</string>

    <string name="menu_challenge_friend">친구 도전</string>

    <string name="menu_make_lunch">도시락 제조</string>

    <string name="menu_help">도움말</string>
</resources>
